homelab/kubernetes/echoserver/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: echoserver
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
