homelab/kubernetes/echoserver/curl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl
  namespace: echoserver
  labels:
    app: curl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl
  template:
    metadata:
      labels:
        app: curl
    spec:
      containers:
        - name: curl
          command:
            - /bin/sh
            - -c
          args:
            - |
              while true; do
                sleep 10;
              done
          image: alpine/curl:8.17.0
          imagePullPolicy: IfNotPresent
