homelab/kubernetes/echoserver/echoserver-alt.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echoserver-alt
  namespace: echoserver
spec:
  parentRefs:
    - name: istio-ingress
      namespace: istio-ingress
  hostnames:
    - "echoserver-alt.homelab.ricoberger.dev"
  rules:
    - backendRefs:
        - name: echoserver-alt
          port: 8080
