homelab/kubernetes/echoserver/echoserver.yaml
---
# curl -o /dev/null -s -w 'Total: %{time_total}s | Status: %{http_code}\n' 'https://echoserver-http.homelab.ricoberger.dev/status?status=random'
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echoserver
  namespace: echoserver
spec:
  parentRefs:
    - name: istio-ingress
      namespace: istio-ingress
  hostnames:
    - "echoserver-http.homelab.ricoberger.dev"
  rules:
    - backendRefs:
        - name: echoserver
          port: 8080

---
# grpcurl -format-error -authority echoserver-grpc.homelab.ricoberger.dev -d '{ "status": "random" }' echoserver-grpc.homelab.ricoberger.dev:443 Echoserver.Status
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: echoserver
  namespace: echoserver
spec:
  parentRefs:
    - name: istio-ingress
      namespace: istio-ingress
  hostnames:
    - "echoserver-grpc.homelab.ricoberger.dev"
  rules:
    - backendRefs:
        - name: echoserver
          port: 8081
